--- a/styles.css
+++ b/styles.css
@@ -466,7 +466,6 @@ body {
 /* #region Spatial tree */
 
 .tree-content-container {
-  padding: 5px 10px 10px;
   border-radius: var(--border-radius-regular);
 }
 
